tests/grammar/import/module/no_module_attr_fail_2/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:3:5
  |
3 | a = math.err_func(1)
  |     ^ attribute 'err_func' not found in 'module 'math''
  |